--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,6 @@ spring.h2.console.settings.web-allow-others=true
 spring.jpa.hibernate.ddl-auto=update
 spring.servlet.multipart.max-file-size=500MB
 spring.servlet.multipart.max-request-size=1GB
+
+# configure port
+server.port=${SERVER_PORT}
